--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,10 @@
 .text-grayish{
 color: #696969;
 display:inline; }
+.h_iframe iframe {
+    position:absolute;
+    top:0;
+    left:0;
+    width:100%;
+    height:100%;
+}
